Button fixed and Sport page done #105 #106

--- a/views/pages/sport/index.html
+++ b/views/pages/sport/index.html
@@ -1,4 +1,4 @@
-<a>< href="<%= baseUrl %>/sport/new"class="btn btn-dark float-right mt-2"role="button>>Add a new Sport</a>
+<a href="<%= baseUrl %>/sport/new" class="btn btn-dark float-right mt-2" role="button">Add a new Sport</a>
 
     <table class="table table-borderless" id="sportTable">
         <thead>
