--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,6 +1,6 @@
 <div class="container-fluid rounded py-3 de-colors">
-    <h1>Davis &amp; Elkins College</h1>
-    <h2>Naylor Learning Center</h2>
+    <h1 class="text-responsive">Davis &amp; Elkins College</h1>
+    <h2 class="text-responsive">Naylor Learning Center</h2>
 </div>
 
 <form class="py-3" method="POST" action="<%= baseUrl %>/login">
