Finish bootstrap formatting

--- a/views/include/logoutTimer.html
+++ b/views/include/logoutTimer.html
@@ -1,4 +1,15 @@
-<div id="logoutWarning" class="w3-container w3-display-container w3-yellow" style="display: none; width: 100%">
-    <span onclick="setLogoutTimer();" class="w3-button w3-display-topright">&times;</span>
-    <p class="w3-margin-left">Due to inactivity, you are about to be logged out of the system. Close this message if you want to continue working.</p>
+<div
+    id="logoutWarning"
+    class="alert alert-warning lert-dismissable"
+    style="display: none"
+>
+    <button
+        onclick="setLogoutTimer();"
+        class="float-right"
+        style="border: none"
+    >
+        <strong>&times;</strong>
+    </button>
+    Due to inactivity, you are about to be logged out of the system. Close this
+    message if you want to continue working.
 </div>
