--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -3,7 +3,7 @@
     <div>
         <a href="<%= baseUrl %>/visit/download">
             <i
-                class="fa fa-download mr-5"
+                class="fa fa-download"
                 style="font-size: 48px; color: black"
                 data-toggle="tooltip"
                 data-placement="right"
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div class="sticky-table-container mt-3">
+<div class="sticky-table-container">
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
