--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,14 +1,34 @@
-<div class="container-fluid rounded py-3 de-colors">
-    <h1 class="text-responsive">Davis &amp; Elkins College</h1>
-    <h2 class="text-responsive">Naylor Learning Center</h2>
-</div>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-5">
+        <div class="container-fluid rounded py-3 de-colors">
+            <h1 class="text-responsive">Davis &amp; Elkins College</h1>
+            <h2 class="text-responsive">Naylor Learning Center</h2>
+        </div>
 
-<form class="py-3" method="POST" action="<%= baseUrl %>/login">
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Username" autofocus name="username" required />
+        <form class="py-3" method="POST" action="<%= baseUrl %>/login">
+            <div class="form-group">
+                <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Username"
+                    autofocus
+                    name="username"
+                    required
+                />
+            </div>
+            <div class="form-group">
+                <input
+                    type="password"
+                    class="form-control"
+                    placeholder="Password"
+                    name="password"
+                    required
+                />
+            </div>
+            <div class="text-right">
+                <button type="submit" class="btn btn-dark">Log In</button>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" name="password" required />
-    </div>
-    <button type="submit" class="btn btn-dark">Submit</button>
-</form>
+</div>
