--- a/views/pages/browser/registerForm.html
+++ b/views/pages/browser/registerForm.html
@@ -1,22 +1,53 @@
 <script>
-	function validateForm() {
+    function validateForm() {
         let d = new Date();
-        d.setTime(d.getTime() + (365 * 24 * 60 * 60 * 1000));
-        document.cookie = "location=" + register.location.value + "; expires=" + d.toUTCString() + "; path=/";
+        d.setTime(d.getTime() + 365 * 24 * 60 * 60 * 1000);
+        document.cookie =
+            "location=" +
+            register.location.value +
+            "; expires=" +
+            d.toUTCString() +
+            "; path=/";
     }
 </script>
 
-<h1>Register Browser</h1>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-5">
+        <h1>Browser Registration</h1>
 
-<p>Submitting this form enables <em>this browser</em> to track NLC visits for a period of one year.</p>
+        <p>
+            Submitting this form enables <em>this browser</em> to track NLC
+            visits for a period of one year.
+        </p>
 
-<p>When a student checks in with this browser, their visit will be marked with the location that you enter
-	below.</p>
+        <p>
+            When a student checks in with this browser, their visit will be
+            marked with the location that you enter below.
+        </p>
 
-<form name="register" method="get" action="<%= baseUrl %>/visit">
-	<div class="form-group">
-		<label for="location">Location Name:</label>
-		<input type="text" class="form-control" autofocus name="location" maxlength="255" required>
+        <form name="register" method="get" action="<%= baseUrl %>/visit">
+            <div class="form-group">
+                <input
+                    type="text"
+                    class="form-control"
+                    autofocus
+                    name="location"
+                    placeholder="Location"
+                    maxlength="255"
+                    required
+                />
+            </div>
+            <div class="text-right">
+                <button
+                    id="submitButton"
+                    type="submit"
+                    class="btn btn-dark"
+                    onclick="return validateForm()"
+                >
+                    Register
+                </button>
+            </div>
+        </form>
     </div>
-    <button id="submitButton" type="submit" class="btn btn-dark" onclick="return validateForm()">Submit</button>
-</form>
+</div>
