--- a/views/pages/major/createForm.html
+++ b/views/pages/major/createForm.html
@@ -1,9 +1,21 @@
-<form method="POST" action="<%= baseUrl + action %>">
-<div>
-    <h1>Add A Major</h1>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-5">
+        <h1>New Major</h1>
+        <form method="POST" action="<%= baseUrl + action %>">
+            <div class="form-group">
+                <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Name"
+                    autofocus
+                    name="name"
+                    required
+                />
+            </div>
+            <div class="text-right">
+                <button type="submit" class="btn btn-dark">Add</button>
+            </div>
+        </form>
+    </div>
 </div>
-<div class="form-group">
-    <input type="text" class="form-control" placeholder="Major's Name" autofocus name="name" required />
-</div>
-<button type="submit" class="btn btn-dark">Submit</button>
-</form>
