--- a/views/pages/sport/createForm.html
+++ b/views/pages/sport/createForm.html
@@ -1,8 +1,26 @@
-<h1>Add A Sport</h1>
-<form method="POST" action="<%= baseUrl + action %>">
-    <div class="form-group">
-        <label for="name" value="name">Sport's Name</label>
-        <input id="name" name="name" type="text" class="form-control" autofocus maxlength="255" required value="<%= formData.name %>">
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-5">
+        <h1>New Sport</h1>
+        <form method="POST" action="<%= baseUrl + action %>">
+            <div class="form-group">
+                <input
+                    id="name"
+                    name="name"
+                    placeholder="Name"
+                    type="text"
+                    class="form-control"
+                    autofocus
+                    maxlength="255"
+                    required
+                    value="<%= formData.name %>"
+                />
+            </div>
+<div class="text-right">
+            <button id="submitButton" type="submit" class="btn btn-dark">
+                Add
+            </button>
     </div>
-    <button id="submitButton" type="submit" class="btn btn-dark" >Submit</button>
-</form>
+        </form>
+    </div>
+</div>
