--- a/views/pages/staff/updateForm.html
+++ b/views/pages/staff/updateForm.html
@@ -1,16 +1,31 @@
-<h1><%= formData.firstName + " " + formData.lastName %></h1>
-<form method="POST" action="<%= baseUrl + action %>">
-    <div class="form-group">
-        <label for="isSlpInstuctor">Are you an SLP Instructor?</label>
-            <select class="form-control" id="isSlpInstructor" name="isSlpInstructor" autofocus maxlength="255">
-                <% if (formData.isSlpInstructor) { %>
-                <option value="true" selected>Yes</option>
-                <option value="false">No</option>
-                <% } else { %>
-                <option value="true">Yes</option>
-                <option value="false" selected>No</option>
-                <% } %>
-            </select>
-        </div>
-    <button id="submitButton" type="submit" class="btn btn-dark" >Submit</button>
-</form>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-5">
+        <h1><%= formData.firstName + " " + formData.lastName %></h1>
+        <form method="POST" action="<%= baseUrl + action %>">
+            <div class="form-group">
+                <label for="isSlpInstuctor">Are you an SLP Instructor?</label>
+                <select
+                    class="form-control"
+                    id="isSlpInstructor"
+                    name="isSlpInstructor"
+                    autofocus
+                    maxlength="255"
+                >
+                    <% if (formData.isSlpInstructor) { %>
+                    <option value="true" selected>Yes</option>
+                    <option value="false">No</option>
+                    <% } else { %>
+                    <option value="true">Yes</option>
+                    <option value="false" selected>No</option>
+                    <% } %>
+                </select>
+            </div>
+            <div class="text-right">
+                <button id="submitButton" type="submit" class="btn btn-dark">
+                    Update
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
