--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,9 +1,25 @@
-<h1>Check In</h1>
-<form method="POST" action="<%= baseUrl + action %>">
-    <div class="form-group">
-        <label for="visitPurposeQuestion">What is your goal/purpose for this visit?</label>
-        <textarea class="form-control" rows="10" autofocus maxlength="255" id="purpose" name="purpose" required></textarea>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-5">
+        <h1>Welcome</h1>
+        <form method="POST" action="<%= baseUrl + action %>">
+            <div class="form-group">
+                <label for="visitPurposeQuestion"
+                    >What is your goal/purpose for this visit?</label
+                >
+                <textarea
+                    class="form-control"
+                    rows="10"
+                    autofocus
+                    maxlength="255"
+                    id="purpose"
+                    name="purpose"
+                    required
+                ></textarea>
+            </div>
+            <div class="text-right">
+                <button type="submit" class="btn btn-dark">Check In</button>
+            </div>
+        </form>
     </div>
-    <button type="submit" class="btn btn-dark">Submit</button>
-
-</form>
+</div>
