--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -22,10 +22,12 @@
         <tbody>
             <% if (records) { let dateFormat = { year: 'numeric', month:
             '2-digit', day: '2-digit', hour: 'numeric', minute: 'numeric',
-            second: 'numeric', }; records.forEach(function(visit) { %>
+            second: 'numeric', };
+            let id = records.length;
+            records.forEach(function(visit) { %>
             <tr>
                 <td class="text-right">
-                    <%= visit.id %>
+                    <%= id-- %>
                 </td>
                 <td>
                     <%= visit.student.firstName + " " + visit.student.lastName
