Test student routing; add coverage

--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -27,7 +27,7 @@
                 />
             </div>
             <div class="text-right">
-                <button type="submit" class="btn btn-dark">Log In</button>
+                <button type="submit" class="btn btn-dark" data-cy="submit">Log In</button>
             </div>
             <% if (!sails.config.custom.ldap) { %>
             <div class="text-right pt-2">
