--- a/views/pages/visit/updateForm.html
+++ b/views/pages/visit/updateForm.html
@@ -109,7 +109,7 @@
     </p>
 
     <div class="text-right">
-        <button class="btn btn-dark" id="submitButton" type="submit">Check Out</button>
+        <button class="btn btn-dark" id="submitButton" type="submit" data-cy="submit">Check Out</button>
     </div>
 </form>
     </div>
