--- a/views/pages/student/updateForm.html
+++ b/views/pages/student/updateForm.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="text-right">
-                <button type="submit" class="btn btn-dark">Update</button>
+                <button type="submit" class="btn btn-dark" data-cy="submit">Update</button>
             </div>
         </form>
     </div>
