--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -18,7 +18,7 @@
                 ></textarea>
             </div>
             <div class="text-right">
-                <button type="submit" class="btn btn-dark">Check In</button>
+                <button type="submit" class="btn btn-dark" data-cy="submit">Check In</button>
             </div>
         </form>
     </div>
