Run test, coverage as separate app

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -78,7 +78,7 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a href="<%= baseUrl %>/major" class="nav-link <%= session.path.startsWith('/major') ? 'active' : '' %>"
+                        <a href="<%= baseUrl %>/major" class="nav-link <%= session.path.startsWith('/major') ? 'active' : '' %>" data-cy="majors-link"
                             >Majors</a
                         >
                     </li>
