--- a/views/pages/major/createForm.html
+++ b/views/pages/major/createForm.html
@@ -14,7 +14,7 @@
                 />
             </div>
             <div class="text-right">
-                <button type="submit" class="btn btn-dark">Add</button>
+                <button type="submit" class="btn btn-dark" data-cy="submit">Add</button>
             </div>
         </form>
     </div>
