--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -4,7 +4,7 @@
         <div class="d-flex justify-content-between">
             <div><h1>Majors</h1></div>
             <div>
-                <a href="<%= baseUrl %>/major/new">
+                <a href="<%= baseUrl %>/major/new" data-cy="new-major-link">
                     <i
                         class="fa fa-plus-circle"
                         style="font-size: 48px; color: black"
