Change support contact address

--- a/views/404.html
+++ b/views/404.html
@@ -24,10 +24,10 @@
 </head>
 
 <body>
-	<div class="alert alert-danger">
+    <div class="alert alert-danger">
         <p><strong>404 Not Found</strong></p>
         <p>You have requested a resource that does not exist.</p>
-        <p>If you think that it should, please seek support from help@dewv.net.</p>
+        <p>If you think that it should, please seek support from devops@dewv.edu.</p>
     </div>
 </body>
 
