--- a/views/500.html
+++ b/views/500.html
@@ -2,33 +2,33 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>
-		Naylor Learning Center
-	</title>
+    <meta charset="utf-8">
+    <title>
+        Naylor Learning Center
+    </title>
 
-	<link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
+    <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
 
-	<!-- Viewport mobile tag for sensible mobile support -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Viewport mobile tag for sensible mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<%/* If you want to discourage search engines from indexing this site, uncomment the following line: */%>
-	<%/* <meta name="robots" content="noindex"> */%>
+    <%/* If you want to discourage search engines from indexing this site, uncomment the following line: */%>
+    <%/* <meta name="robots" content="noindex"> */%>
 
 
-	<!--STYLES-->
-	<link rel="stylesheet" href="/styles/animate-fade-out.css">
-	<link rel="stylesheet" href="/styles/de.css">
-	<link rel="stylesheet" href="/styles/sticky-table.css">
-	<!--STYLES END-->
+    <!--STYLES-->
+    <link rel="stylesheet" href="/styles/animate-fade-out.css">
+    <link rel="stylesheet" href="/styles/de.css">
+    <link rel="stylesheet" href="/styles/sticky-table.css">
+    <!--STYLES END-->
 </head>
 
 <body>
-	<div class="alert alert-danger">
-		<p><strong>500 Internal Server Error</strong></p>
-		<p>We're sorry, but we were unable to process your request.</p>
-		<p>Please seek support from help@dewv.net.</p>
-	</div>
+    <div class="alert alert-danger">
+        <p><strong>500 Internal Server Error</strong></p>
+        <p>We're sorry, but we were unable to process your request.</p>
+        <p>Please seek support from devops@dewv.edu.</p>
+    </div>
 </body>
 
 </html>
