--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Naylor Learning Center</title>
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="<%= baseUrl %>/DE_Logo.ico"
-        />
 
-        <!-- Viewport mobile tag for sensible mobile support -->
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1"
-        />
+<head>
+    <meta charset="utf-8" />
+    <title>Naylor Learning Center</title>
+    <link rel="icon" type="image/x-icon" href="<%= baseUrl %>/DE_Logo.ico" />
 
-        <%/* If you want to discourage search engines from indexing this site,
+    <!-- Viewport mobile tag for sensible mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
+    <%/* If you want to discourage search engines from indexing this site,
         uncomment the following line: */%> <%/*
         <meta name="robots" content="noindex" />
         */%>
 
-        <!--
+    <!--
         Stylesheets and Preprocessors
         ==============================
 
@@ -40,119 +34,92 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-        <!--STYLES-->
-        <link rel="stylesheet" href="/styles/animate-fade-out.css">
-        <link rel="stylesheet" href="/styles/de.css">
-        <link rel="stylesheet" href="/styles/sticky-table.css">
-        <!--STYLES END-->
+    <!--STYLES-->
+    <link rel="stylesheet" href="/styles/animate-fade-out.css">
+    <link rel="stylesheet" href="/styles/de.css">
+    <link rel="stylesheet" href="/styles/sticky-table.css">
+    <!--STYLES END-->
 
-        <!-- External, manually loaded styles -->
-        <link
-            rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-        />
-    </head>
+    <!-- External, manually loaded styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
 
-    <body style="padding-top: 60px">
-        <% try { %> <% if (typeof session.role !== "undefined") { %>
-        <nav class="navbar fixed-top navbar-expand-md navbar-dark de-colors">
-            <a href="#" class="navbar-brand">Naylor Learning Center</a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#collapsibleNavbar"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <% if (session.role === "staff") { %>
-                    <li class="nav-item">
-                        <a href="<%= baseUrl %>/visit" class="nav-link <%= session.path === '/visit' ? 'active' : '' %>"
-                            >Visits</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a href="<%= baseUrl %>/major" class="nav-link <%= session.path.startsWith('/major') ? 'active' : '' %>" data-cy="majors-link"
-                            >Majors</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a href="<%= baseUrl %>/sport" class="nav-link <%= session.path.startsWith('/sport') ? 'active' : '' %>"
-                            >Sports</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a
-                            href="<%= baseUrl %>/browser/register"
-                            class="nav-link <%= session.path === '/browser/register' ? 'active' : '' %>"
-                            >Browser Registration</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a
-                            href="<%= baseUrl %>/staff/<%= session.userId %>/edit"
-                            class="nav-link <%= session.path.startsWith('/staff/') ? 'active' : '' %>"
-                            >Profile</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a href="<%= baseUrl %>/logout" class="nav-link"
-                            >Log out</a
-                        >
-                    </li>
-                    <% } %> <% if (session.role === "student") { %>
-                    <li class="nav-item">
-                        <a
-                            href="<%= baseUrl %>/student/<%= session.userId %>/edit"
-                            class="nav-link <%= session.path.startsWith('/student/') ? 'active' : '' %>"
-                            >Profile</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a href="<%= baseUrl %>/logout" class="nav-link"
-                            >Log out</a
-                        >
-                    </li>
+<body style="padding-top: 60px">
+    <% try { %> <% if (typeof session.role !== "undefined") { %>
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark de-colors" data-cy="navbar">
+        <a href="#" class="navbar-brand">Naylor Learning Center</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <% if (session.role === "staff") { %>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/visit"
+                        class="nav-link <%= session.path === '/visit' ? 'active' : '' %>">Visits</a>
+                </li>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/major"
+                        class="nav-link <%= session.path.startsWith('/major') ? 'active' : '' %>"
+                        data-cy="majors-link">Majors</a>
+                </li>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/sport"
+                        class="nav-link <%= session.path.startsWith('/sport') ? 'active' : '' %>">Sports</a>
+                </li>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/browser/register"
+                        class="nav-link <%= session.path === '/browser/register' ? 'active' : '' %>">Browser
+                        Registration</a>
+                </li>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/staff/<%= session.userId %>/edit"
+                        class="nav-link <%= session.path.startsWith('/staff/') ? 'active' : '' %>">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/logout" class="nav-link">Log out</a>
+                </li>
+                <% } %> <% if (session.role === "student") { %>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/student/<%= session.userId %>/edit"
+                        class="nav-link <%= session.path.startsWith('/student/') ? 'active' : '' %>">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a href="<%= baseUrl %>/logout" class="nav-link">Log out</a>
+                </li>
 
-                    <% } %>
-                </ul>
-            </div>
-        </nav>
-        <% } %>
-        <% if (session.role === "student") { %>
-            <%- exposeLocalsToBrowser({ keys: ["baseUrl"] });-%> <%-
-            include("../include/logoutTimer.html"); -%>
-        <% } %>
-        <% if (typeof session.banner !== "undefined") { %>
-        <div
-            class="alert alert-dismissible <%= typeof session.bannerClass === 'undefined' ? 'alert-success' : session.bannerClass %> <%= typeof session.role === 'undefined' ? 'animate-fade-out' : '' %>"
-            style="margin-top: -5px"
-        >
-            <button type="button" class="close" data-dismiss="alert">
-                &times;
-            </button>
-            <%= session.banner %>
+                <% } %>
+            </ul>
         </div>
-        <% session.banner = undefined; %> <% } %>
+    </nav>
+    <% } %>
+    <% if (session.role === "student") { %>
+    <%- exposeLocalsToBrowser({ keys: ["baseUrl"] });-%> <%-
+            include("../include/logoutTimer.html"); -%>
+    <% } %>
+    <% if (typeof session.banner !== "undefined") { %>
+    <div class="alert alert-dismissible <%= typeof session.bannerClass === 'undefined' ? 'alert-success' : session.bannerClass %> <%= typeof session.role === 'undefined' ? 'animate-fade-out' : '' %>"
+        style="margin-top: -5px">
+        <button type="button" class="close" data-dismiss="alert">
+            &times;
+        </button>
+        <%= session.banner %>
+    </div>
+    <% session.banner = undefined; %> <% } %>
 
-        <div class="container-fluid"><%- body %></div>
+    <div class="container-fluid"><%- body %></div>
 
-        <!-- Client-side Templates
+    <!-- Client-side Templates
         ========================
         HTML templates are important prerequisites of modern, rich client applications. To work their magic, frameworks like React, Vue.js, Angular, Ember, and Backbone require that you load these templates client-side. By default, your Gruntfile is configured to automatically load and precompile client-side JST templates in your `assets/templates` folder, then include them here automatically (between TEMPLATES and TEMPLATES END). To customize this behavior to fit your needs, just edit `tasks/pipeline.js`. For example, here are a few things you could do: + Import templates from other directories + Use a different view engine (handlebars, dust, pug/jade, etc.) + Internationalize your client-side templates using a server-side stringfile before they're served.
     -->
 
-        <!--TEMPLATES-->
-        
-        <!--TEMPLATES END-->
+    <!--TEMPLATES-->
+    
+    <!--TEMPLATES END-->
 
-        <!--
+    <!--
         Server-side View Locals
         ========================
 
@@ -167,7 +134,7 @@
 
     -->
 
-        <!--
+    <!--
 
       Client-side Javascript
       ========================
@@ -190,26 +157,27 @@
 
     -->
 
-        <!--SCRIPTS-->
-        <script src="/js/logoutTimer.js"></script>
-        <script src="/js/preventMultiSubmit.js"></script>
-        <!--SCRIPTS END-->
+    <!--SCRIPTS-->
+    <script src="/js/logoutTimer.js"></script>
+    <script src="/js/preventMultiSubmit.js"></script>
+    <!--SCRIPTS END-->
 
-        <!-- External, manually loaded scripts -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- External, manually loaded scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-        <script>
-            $(document).ready(function () {
-                $('[data-toggle="tooltip"]').tooltip();
-            });
-        </script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 
-        <% if (typeof session.role !== "undefined" && session.role === "student") { %>
-        <script>
-            setLogoutTimer();
-        </script>
-        <% } %> <% } catch(error) { console.log(`EJS rendering error: ${error}`); }; %>
-    </body>
+    <% if (typeof session.role !== "undefined" && session.role === "student") { %>
+    <script>
+        setLogoutTimer();
+    </script>
+    <% } %> <% } catch(error) { console.log(`EJS rendering error: ${error}`); }; %>
+</body>
+
 </html>
